--- a/source/css/_partials/_layout/tape.styl
+++ b/source/css/_partials/_layout/tape.styl
@@ -36,7 +36,9 @@
 .tape-disabled .side-card::before,
 .tape-disabled .comments-section::after,
 .tape-disabled .related-paper::after,
-.tape-disabled .site-header::after {
+.tape-disabled .site-header::after,
+.tape-disabled .welcome-thumb--image::before,
+.tape-disabled .welcome-thumb--image::after {
   display: none;
 }
 
